--- a/topics.html
+++ b/topics.html
@@ -120,14 +120,14 @@
                                         <td>Security</td>
                                         <td class="hide-on-med-and-down">Account and password related</td>
                                         <td><a href="#" class="subscription secondary-content button button-border-primary button-rounded waves-effect waves-block waves-cyan hide-on-med-and-down" style="float:left">Subscribe</a>
-                                            <img class="hide-on-large-only" src="images/play-blue-2.png"></td>
+                                            <img class="subscription hide-on-large-only" src="images/play-blue-2.png"></td>
                                         <td><a href="#"><i class="material-icons">input</i></a></td>
                                         <td><a href="#"><i class="material-icons">settings</i></a></td>
                                         <tr>
                                             <td>Job openings</td>
                                             <td class="hide-on-med-and-down">Internal oracle postitons</td>
                                             <td><a href="#" class="subscription secondary-content button button-border-primary button-rounded waves-effect waves-block waves-cyan hide-on-med-and-down" style="float:left">Unsubscribe</a>
-                                                <img class="hide-on-large-only" src="images/pause-blue.png">
+                                                <img class="subscription hide-on-large-only" src="images/pause-blue.png">
                                             </td>
                                             <td><a href="#"><i class="material-icons">input</i></a></td>
                                             <td><a href="#"><i class="material-icons">settings</i></a></td>
@@ -135,7 +135,7 @@
                                         <tr>
                                             <td>Maintanance</td>
                                             <td class="hide-on-med-and-down">Outage related notification</td>
-                                            <td><a href="#" class="subscription secondary-content button button-border-primary button-rounded waves-effect waves-block waves-cyan hide-on-med-and-down" style="float:left">Unsubscribe</a><img class="hide-on-large-only" src="images/pause-blue.png"></td>
+                                            <td><a href="#" class="subscription secondary-content button button-border-primary button-rounded waves-effect waves-block waves-cyan hide-on-med-and-down" style="float:left">Unsubscribe</a><img class="subscription hide-on-large-only" src="images/pause-blue.png"></td>
                                             <td><a href="#"><i class="material-icons">input</i></a></td>
                                             <td><a href="#"><i class="material-icons">settings</i></a></td>
 
@@ -144,7 +144,7 @@
                                             <td>Maintanance</td>
                                             <td class="hide-on-med-and-down">Outage related notification</td>
                                             <td>
-                                                <a href="#" class="subscription secondary-content button button-border-primary button-rounded waves-effect waves-block waves-cyan hide-on-med-and-down" style="float:left">Subscribe</a><img class="hide-on-large-only" src="images/play-blue-2.png"></td>
+                                                <a href="#" class="subscription secondary-content button button-border-primary button-rounded waves-effect waves-block waves-cyan hide-on-med-and-down" style="float:left">Subscribe</a><img class="hide-on-large-only subscription " src="images/play-blue-2.png"></td>
                                             <td><a href="#"><i class="material-icons">input</i></a></td>
                                             <td><a href="#"><i class="material-icons">settings</i></a></td>
 
