--- a/applications.html
+++ b/applications.html
@@ -1,52 +1,53 @@
 <div id="breadcrumbs-wrapper" class=" grey lighten-3">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col s12 m12 l12">
-                                <h5 class="breadcrumbs-title" style="margin-bottom:20px">Applications</h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
+    <div class="container">
+        <div class="row">
+            <div class="col s12 m12 l12">
+                <h5 class="breadcrumbs-title" style="margin-bottom:20px">Applications</h5>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col s12 m12 l12">
+            <!-- add new app-->
+            <div class="padding-top-10">
+                <a class="waves-effect waves-light btn" data-bind="click: showNewAppForm">Create New</a>
+            </div>
+            <div id="app-form" class="row">
+                <form class="col s12 padding-top-10">
                     <div class="row">
-                        <div class="col s12 m12 l12">
-                            <ul class="collection">
-                                <li class="collection-item avatar">
-                                    <i class="material-icons circle blue">assignment_ind</i>
-                                    <span class="title">Aria People</span>
-                                    <p>First Line
-
-                                    </p>
-
-                                    <a href="#!/topics" class="secondary-content button button-border-primary button-rounded waves-effect waves-block waves-cyan">View</a>
-
-                                </li>
-                                <li class="collection-item avatar">
-                                    <i class="material-icons circle">folder</i>
-                                    <span class="title">Oracle OIM</span>
-                                    <p>Oracle Identity Management
-
-                                    </p>
-                                    <a href="#!/topics" class="secondary-content button button-border-primary button-rounded waves-effect waves-block waves-cyan">View</a>
-                                </li>
-                                <li class="collection-item avatar">
-                                    <i class="material-icons circle green">insert_chart</i>
-                                    <span class="title">Oracle GIS</span>
-                                    <p>Oracle Global information security
-
-                                    </p>
-                                    <a href="#!/topics" class="secondary-content"><i class="material-icons">input</i></a>
-                                </li>
-                                <li class="collection-item avatar">
-                                    <i class="material-icons circle red">play_arrow</i>
-                                    <span class="title">Oracle Taleo</span>
-                                    <p>Oracle recruitment portal
-
-                                    </p>
-                                    <a href="#!/topics" class="secondary-content"><i class="material-icons">input</i></a>
-                                </li>
-                            </ul>
-
+                        <div class="input-field col s6">
+                            <input id="app_name" type="text" class="validate" data-bind="textInput: newApp.name">
+                            <label for="app_name">Application name</label>
                         </div>
                     </div>
-                </div>
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="app_desc" type="text" class="validate" data-bind="textInput: newApp.desc">
+                            <label for="app_desc">Description</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <a class="waves-effect waves-light btn" data-bind="click: submitApp">Submit</a>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <!-- end add new-->
+            <!-- application list-->
+            <ul class="collection" data-bind="foreach : appsList">
+                <li class="collection-item avatar">
+                    <i class="material-icons circle" data-bind="text: icon,css: color"></i>
+                    <span class="title" data-bind="text: name"></span>
+                    <p data-bind="text: desc">
+                    </p>
+
+                    <a href="#!/topics" class="secondary-content"><i class="material-icons">input</i></a>
+
+            </ul>
+
+        </div>
+    </div>
+</div>
