npm intit and gulp install

--- a/applications.html
+++ b/applications.html
@@ -17,13 +17,13 @@
             <div id="app-form" class="row">
                 <form class="col s12 padding-top-10">
                     <div class="row">
-                        <div class="input-field col s6">
+                        <div class="input-field col s12 m6">
                             <input id="app_name" type="text" class="validate" data-bind="textInput: newApp.name">
                             <label for="app_name">Application name</label>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="input-field col s6">
+                        <div class="input-field col s12 m6">
                             <input id="app_desc" type="text" class="validate" data-bind="textInput: newApp.desc">
                             <label for="app_desc">Description</label>
                         </div>
@@ -45,7 +45,7 @@
                     </p>
 
                     <a href="#!/topics" class="secondary-content"><i class="material-icons">input</i></a>
-
+                </li>
             </ul>
 
         </div>
