--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <!--    <script src="js/materialize.js"></script>-->
     <link rel="stylesheet" href="css/materialize.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/require.js" data-main="js/main"></script>
+    <script src="js/lib/require.js" data-main="js/main-built"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="css/buttons.css">
